--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700&display=swap");
-@import "tailwindcss";
+@import "tailwindcss" layer(theme);
 
 * {
   font-family: "Titillium Web", sans-serif;
